Add some missing tests